--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,7 @@
   .icon__wrapper {
     @apply border border-gray-400 rounded-full w-[40px] h-[40px] grid place-items-center text-[22px]
   }
+  .feature_btn{
+    @apply bg-accent text-white px-4 py-1 rounded-full hover:bg-green-800
+  }
 }
